--- a/SPIdisplay/SPIdisplay.ioc
+++ b/SPIdisplay/SPIdisplay.ioc
@@ -8,16 +8,17 @@ KeepUserPlacement=true
 Mcu.Family=STM32L4
 Mcu.IP0=I2C1
 Mcu.IP1=I2C2
-Mcu.IP10=USB_OTG_FS
+Mcu.IP10=USB_HOST
+Mcu.IP11=USB_OTG_FS
 Mcu.IP2=LCD
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
-Mcu.IP5=SAI1
-Mcu.IP6=SPI1
-Mcu.IP7=SYS
-Mcu.IP8=USART2
-Mcu.IP9=USB_HOST
-Mcu.IPNb=11
+Mcu.IP5=RTC
+Mcu.IP6=SAI1
+Mcu.IP7=SPI1
+Mcu.IP8=SYS
+Mcu.IP9=USART2
+Mcu.IPNb=12
 Mcu.Name=STM32L476V(C-E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -100,10 +101,12 @@ Mcu.Pin78=PB9
 Mcu.Pin79=PE0
 Mcu.Pin8=PH0-OSC_IN (PH0)
 Mcu.Pin80=PE1
-Mcu.Pin81=VP_SYS_VS_Systick
-Mcu.Pin82=VP_USB_HOST_VS_USB_HOST_CDC_FS
+Mcu.Pin81=VP_RTC_VS_RTC_Activate
+Mcu.Pin82=VP_RTC_VS_RTC_Calendar
+Mcu.Pin83=VP_SYS_VS_Systick
+Mcu.Pin84=VP_USB_HOST_VS_USB_HOST_CDC_FS
 Mcu.Pin9=PH1-OSC_OUT (PH1)
-Mcu.PinsNb=83
+Mcu.PinsNb=85
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476VGTx
@@ -646,7 +649,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_LCD_Init-LCD-false-HAL-true,6-MX_SAI1_Init-SAI1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USB_HOST_Init-USB_HOST-false-HAL-true,9-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_LCD_Init-LCD-false-HAL-true,6-MX_SAI1_Init-SAI1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USB_HOST_Init-USB_HOST-false-HAL-true,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_RTC_Init-RTC-false-HAL-true
 RCC.ADCFreq_Value=48000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=20000000
@@ -725,8 +728,8 @@ SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
 SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
-SPI1.CalculateBaudRate=312.5 KBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+SPI1.CalculateBaudRate=10.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
@@ -753,6 +756,10 @@ USB_HOST0.BSP.solution=PC9
 USB_OTG_FS.IPParameters=phy_itface,VirtualMode
 USB_OTG_FS.VirtualMode=Host_Only
 USB_OTG_FS.phy_itface=HCD_PHY_EMBEDDED
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
+VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_USB_HOST_VS_USB_HOST_CDC_FS.Mode=CDC_FS
