--- a/SPIdisplay/SPIdisplay.ioc
+++ b/SPIdisplay/SPIdisplay.ioc
@@ -27,86 +27,87 @@ Mcu.Pin10=PC0
 Mcu.Pin11=PC1
 Mcu.Pin12=PC2
 Mcu.Pin13=PC3
-Mcu.Pin14=PA0
-Mcu.Pin15=PA1
-Mcu.Pin16=PA2
-Mcu.Pin17=PA3
-Mcu.Pin18=PA4
-Mcu.Pin19=PA5
+Mcu.Pin14=PA1
+Mcu.Pin15=PA2
+Mcu.Pin16=PA3
+Mcu.Pin17=PA4
+Mcu.Pin18=PA5
+Mcu.Pin19=PA6
 Mcu.Pin2=PE4
-Mcu.Pin20=PA6
-Mcu.Pin21=PA7
-Mcu.Pin22=PC4
-Mcu.Pin23=PC5
-Mcu.Pin24=PB0
-Mcu.Pin25=PB1
-Mcu.Pin26=PB2
-Mcu.Pin27=PE7
-Mcu.Pin28=PE8
-Mcu.Pin29=PE9
+Mcu.Pin20=PA7
+Mcu.Pin21=PC4
+Mcu.Pin22=PC5
+Mcu.Pin23=PB0
+Mcu.Pin24=PB1
+Mcu.Pin25=PB2
+Mcu.Pin26=PE7
+Mcu.Pin27=PE8
+Mcu.Pin28=PE9
+Mcu.Pin29=PE10
 Mcu.Pin3=PE5
-Mcu.Pin30=PE10
-Mcu.Pin31=PE11
-Mcu.Pin32=PE12
-Mcu.Pin33=PE13
-Mcu.Pin34=PE14
-Mcu.Pin35=PE15
-Mcu.Pin36=PB10
-Mcu.Pin37=PB11
-Mcu.Pin38=PB12
-Mcu.Pin39=PB13
+Mcu.Pin30=PE11
+Mcu.Pin31=PE12
+Mcu.Pin32=PE13
+Mcu.Pin33=PE14
+Mcu.Pin34=PE15
+Mcu.Pin35=PB10
+Mcu.Pin36=PB11
+Mcu.Pin37=PB12
+Mcu.Pin38=PB13
+Mcu.Pin39=PB14
 Mcu.Pin4=PE6
-Mcu.Pin40=PB14
-Mcu.Pin41=PB15
-Mcu.Pin42=PD8
-Mcu.Pin43=PD9
-Mcu.Pin44=PD10
-Mcu.Pin45=PD11
-Mcu.Pin46=PD12
-Mcu.Pin47=PD13
-Mcu.Pin48=PD14
-Mcu.Pin49=PD15
+Mcu.Pin40=PB15
+Mcu.Pin41=PD8
+Mcu.Pin42=PD9
+Mcu.Pin43=PD10
+Mcu.Pin44=PD11
+Mcu.Pin45=PD12
+Mcu.Pin46=PD13
+Mcu.Pin47=PD14
+Mcu.Pin48=PD15
+Mcu.Pin49=PC6
 Mcu.Pin5=PC13
-Mcu.Pin50=PC6
-Mcu.Pin51=PC7
-Mcu.Pin52=PC8
-Mcu.Pin53=PC9
-Mcu.Pin54=PA8
-Mcu.Pin55=PA9
-Mcu.Pin56=PA10
-Mcu.Pin57=PA11
-Mcu.Pin58=PA12
-Mcu.Pin59=PA13 (JTMS-SWDIO)
+Mcu.Pin50=PC7
+Mcu.Pin51=PC8
+Mcu.Pin52=PC9
+Mcu.Pin53=PA8
+Mcu.Pin54=PA9
+Mcu.Pin55=PA10
+Mcu.Pin56=PA11
+Mcu.Pin57=PA12
+Mcu.Pin58=PA13 (JTMS-SWDIO)
+Mcu.Pin59=PA14 (JTCK-SWCLK)
 Mcu.Pin6=PC14-OSC32_IN (PC14)
-Mcu.Pin60=PA14 (JTCK-SWCLK)
-Mcu.Pin61=PA15 (JTDI)
-Mcu.Pin62=PC10
-Mcu.Pin63=PC11
-Mcu.Pin64=PD0
-Mcu.Pin65=PD1
-Mcu.Pin66=PD2
-Mcu.Pin67=PD3
-Mcu.Pin68=PD4
-Mcu.Pin69=PD5
+Mcu.Pin60=PA15 (JTDI)
+Mcu.Pin61=PC10
+Mcu.Pin62=PC11
+Mcu.Pin63=PD0
+Mcu.Pin64=PD1
+Mcu.Pin65=PD2
+Mcu.Pin66=PD3
+Mcu.Pin67=PD4
+Mcu.Pin68=PD5
+Mcu.Pin69=PD6
 Mcu.Pin7=PC15-OSC32_OUT (PC15)
-Mcu.Pin70=PD6
-Mcu.Pin71=PD7
-Mcu.Pin72=PB3 (JTDO-TRACESWO)
-Mcu.Pin73=PB4 (NJTRST)
-Mcu.Pin74=PB5
-Mcu.Pin75=PB6
-Mcu.Pin76=PB7
-Mcu.Pin77=PB8
-Mcu.Pin78=PB9
-Mcu.Pin79=PE0
+Mcu.Pin70=PD7
+Mcu.Pin71=PB3 (JTDO-TRACESWO)
+Mcu.Pin72=PB4 (NJTRST)
+Mcu.Pin73=PB5
+Mcu.Pin74=PB6
+Mcu.Pin75=PB7
+Mcu.Pin76=PB8
+Mcu.Pin77=PB9
+Mcu.Pin78=PE0
+Mcu.Pin79=PE1
 Mcu.Pin8=PH0-OSC_IN (PH0)
-Mcu.Pin80=PE1
-Mcu.Pin81=VP_RTC_VS_RTC_Activate
-Mcu.Pin82=VP_RTC_VS_RTC_Calendar
-Mcu.Pin83=VP_SYS_VS_Systick
-Mcu.Pin84=VP_USB_HOST_VS_USB_HOST_CDC_FS
+Mcu.Pin80=VP_RTC_VS_RTC_Activate
+Mcu.Pin81=VP_RTC_VS_RTC_Calendar
+Mcu.Pin82=VP_RTC_VS_RTC_Alarm_B_Intern
+Mcu.Pin83=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin84=VP_SYS_VS_Systick
+Mcu.Pin85=VP_USB_HOST_VS_USB_HOST_CDC_FS
 Mcu.Pin9=PH1-OSC_OUT (PH1)
-Mcu.PinsNb=85
+Mcu.PinsNb=86
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476VGTx
@@ -114,20 +115,19 @@ MxCube.Version=5.3.0
 MxDb.Version=DB.5.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.RTC_Alarm_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-PA0.GPIOParameters=GPIO_PuPd,GPIO_Mode
-PA0.GPIO_Mode=GPIO_MODE_INPUT
-PA0.GPIO_PuPd=GPIO_NOPULL
-PA0.Locked=true
-PA0.Signal=GPIO_Input
 PA1.GPIOParameters=GPIO_PuPd,GPIO_Mode
 PA1.GPIO_Mode=GPIO_MODE_INPUT
 PA1.GPIO_PuPd=GPIO_NOPULL
@@ -422,7 +422,7 @@ PCC.Temperature=25
 PCC.Vdd=3.0
 PD0.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
 PD0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
-PD0.GPIO_PuPd=GPIO_NOPULL
+PD0.GPIO_PuPd=GPIO_PULLUP
 PD0.Locked=true
 PD0.Signal=GPXTI0
 PD1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
@@ -649,7 +649,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_LCD_Init-LCD-false-HAL-true,6-MX_SAI1_Init-SAI1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USB_HOST_Init-USB_HOST-false-HAL-true,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_LCD_Init-LCD-false-HAL-true,6-MX_SAI1_Init-SAI1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USB_HOST_Init-USB_HOST-false-HAL-false,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_RTC_Init-RTC-false-HAL-true
 RCC.ADCFreq_Value=48000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=20000000
@@ -706,8 +706,10 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=80000000
 RCC.VCOSAI1OutputFreq_Value=96000000
 RCC.VCOSAI2OutputFreq_Value=32000000
-SAI1.FrameLength-SAI_B_SyncSlave=8
-SAI1.IPParameters=Instance-SAI_A_MasterWithClock,MClockEnable-SAI_A_MasterWithClock,Instance-SAI_B_SyncSlave,VirtualMode-SAI_B_SyncSlave,Synchro-SAI_B_SyncSlave,VirtualMode-SAI_A_MasterWithClock,FrameLength-SAI_B_SyncSlave
+RTC.Alarm-Alarm\ A=RTC_ALARM_A
+RTC.Alarm_B-Alarm\ B=RTC_ALARM_B
+RTC.IPParameters=Alarm-Alarm A,Alarm_B-Alarm B
+SAI1.IPParameters=Instance-SAI_A_MasterWithClock,MClockEnable-SAI_A_MasterWithClock,Instance-SAI_B_SyncSlave,VirtualMode-SAI_B_SyncSlave,Synchro-SAI_B_SyncSlave,VirtualMode-SAI_A_MasterWithClock
 SAI1.Instance-SAI_A_MasterWithClock=SAI$Index_Block_A
 SAI1.Instance-SAI_B_SyncSlave=SAI$Index_Block_B
 SAI1.MClockEnable-SAI_A_MasterWithClock=SAI_MASTERCLOCK_ENABLE
@@ -758,6 +760,10 @@ USB_OTG_FS.VirtualMode=Host_Only
 USB_OTG_FS.phy_itface=HCD_PHY_EMBEDDED
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Alarm_A_Intern.Mode=Alarm A
+VP_RTC_VS_RTC_Alarm_A_Intern.Signal=RTC_VS_RTC_Alarm_A_Intern
+VP_RTC_VS_RTC_Alarm_B_Intern.Mode=Alarm B
+VP_RTC_VS_RTC_Alarm_B_Intern.Signal=RTC_VS_RTC_Alarm_B_Intern
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
