changed pins for interrupts

--- a/SPIdisplay/SPIdisplay.ioc
+++ b/SPIdisplay/SPIdisplay.ioc
@@ -422,7 +422,7 @@ PCC.Temperature=25
 PCC.Vdd=3.0
 PD0.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
 PD0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
-PD0.GPIO_PuPd=GPIO_PULLUP
+PD0.GPIO_PuPd=GPIO_NOPULL
 PD0.Locked=true
 PD0.Signal=GPXTI0
 PD1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
