small changes. starting to test all 4 buttons

--- a/SPIdisplay/SPIdisplay.ioc
+++ b/SPIdisplay/SPIdisplay.ioc
@@ -1,24 +1,21 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
-I2C1.IPParameters=Timing
-I2C1.Timing=0x00404C74
 I2C2.IPParameters=Timing
 I2C2.Timing=0x00404C74
 KeepUserPlacement=true
 Mcu.Family=STM32L4
-Mcu.IP0=I2C1
-Mcu.IP1=I2C2
-Mcu.IP10=USB_HOST
-Mcu.IP11=USB_OTG_FS
-Mcu.IP2=LCD
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=RTC
-Mcu.IP6=SAI1
-Mcu.IP7=SPI1
-Mcu.IP8=SYS
-Mcu.IP9=USART2
-Mcu.IPNb=12
+Mcu.IP0=I2C2
+Mcu.IP1=LCD
+Mcu.IP10=USB_OTG_FS
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=RTC
+Mcu.IP5=SAI1
+Mcu.IP6=SPI1
+Mcu.IP7=SYS
+Mcu.IP8=USART2
+Mcu.IP9=USB_HOST
+Mcu.IPNb=11
 Mcu.Name=STM32L476V(C-E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -111,11 +108,13 @@ Mcu.PinsNb=86
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476VGTx
-MxCube.Version=5.3.0
-MxDb.Version=DB.5.0.30
+MxCube.Version=5.4.0
+MxDb.Version=DB.5.0.40
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -278,13 +277,10 @@ PB2.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB2.Locked=true
 PB2.PinState=GPIO_PIN_RESET
 PB2.Signal=GPIO_Output
-PB3\ (JTDO-TRACESWO).GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
-PB3\ (JTDO-TRACESWO).GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
-PB3\ (JTDO-TRACESWO).GPIO_PuPd=GPIO_NOPULL
-PB3\ (JTDO-TRACESWO).GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PB3\ (JTDO-TRACESWO).GPIOParameters=GPIO_PuPd
+PB3\ (JTDO-TRACESWO).GPIO_PuPd=GPIO_PULLDOWN
 PB3\ (JTDO-TRACESWO).Locked=true
-PB3\ (JTDO-TRACESWO).PinState=GPIO_PIN_RESET
-PB3\ (JTDO-TRACESWO).Signal=GPIO_Output
+PB3\ (JTDO-TRACESWO).Signal=GPXTI3
 PB4\ (NJTRST).GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PB4\ (NJTRST).GPIO_Mode=GPIO_MODE_AF_PP
 PB4\ (NJTRST).GPIO_PuPd=GPIO_NOPULL
@@ -299,22 +295,14 @@ PB5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB5.Locked=true
 PB5.Mode=SEG9
 PB5.Signal=LCD_SEG9
-PB6.GPIOParameters=GPIO_FM6,GPIO_Speed,GPIO_PuPdOD,GPIO_Mode
-PB6.GPIO_FM6=__NULL
-PB6.GPIO_Mode=GPIO_MODE_AF_OD
-PB6.GPIO_PuPdOD=GPIO_PULLUP
-PB6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB6.GPIOParameters=GPIO_PuPd
+PB6.GPIO_PuPd=GPIO_PULLDOWN
 PB6.Locked=true
-PB6.Mode=I2C
-PB6.Signal=I2C1_SCL
-PB7.GPIOParameters=GPIO_Speed,GPIO_PuPdOD,GPIO_FM7,GPIO_Mode
-PB7.GPIO_FM7=__NULL
-PB7.GPIO_Mode=GPIO_MODE_AF_OD
-PB7.GPIO_PuPdOD=GPIO_PULLUP
-PB7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB6.Signal=GPXTI6
+PB7.GPIOParameters=GPIO_PuPd
+PB7.GPIO_PuPd=GPIO_PULLDOWN
 PB7.Locked=true
-PB7.Mode=I2C
-PB7.Signal=I2C1_SDA
+PB7.Signal=GPXTI7
 PB8.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
 PB8.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
 PB8.GPIO_PuPd=GPIO_NOPULL
@@ -726,8 +714,14 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
 SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
+SH.GPXTI7.0=GPIO_EXTI7
+SH.GPXTI7.ConfNb=1
 SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
