--- a/SPIdisplay/SPIdisplay.ioc
+++ b/SPIdisplay/SPIdisplay.ioc
@@ -20,91 +20,85 @@ Mcu.Name=STM32L476V(C-E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PC0
-Mcu.Pin11=PC1
-Mcu.Pin12=PC2
-Mcu.Pin13=PC3
-Mcu.Pin14=PA1
-Mcu.Pin15=PA2
-Mcu.Pin16=PA3
-Mcu.Pin17=PA4
-Mcu.Pin18=PA5
-Mcu.Pin19=PA6
+Mcu.Pin10=PC1
+Mcu.Pin11=PC2
+Mcu.Pin12=PC3
+Mcu.Pin13=PA1
+Mcu.Pin14=PA2
+Mcu.Pin15=PA3
+Mcu.Pin16=PA4
+Mcu.Pin17=PA5
+Mcu.Pin18=PA6
+Mcu.Pin19=PA7
 Mcu.Pin2=PE4
-Mcu.Pin20=PA7
-Mcu.Pin21=PC4
-Mcu.Pin22=PC5
-Mcu.Pin23=PB0
-Mcu.Pin24=PB1
-Mcu.Pin25=PB2
-Mcu.Pin26=PE7
-Mcu.Pin27=PE8
-Mcu.Pin28=PE9
-Mcu.Pin29=PE10
+Mcu.Pin20=PC4
+Mcu.Pin21=PC5
+Mcu.Pin22=PB0
+Mcu.Pin23=PB1
+Mcu.Pin24=PB2
+Mcu.Pin25=PE7
+Mcu.Pin26=PE8
+Mcu.Pin27=PE9
+Mcu.Pin28=PE10
+Mcu.Pin29=PE11
 Mcu.Pin3=PE5
-Mcu.Pin30=PE11
-Mcu.Pin31=PE12
-Mcu.Pin32=PE13
-Mcu.Pin33=PE14
-Mcu.Pin34=PE15
-Mcu.Pin35=PB10
-Mcu.Pin36=PB11
-Mcu.Pin37=PB12
-Mcu.Pin38=PB13
-Mcu.Pin39=PB14
+Mcu.Pin30=PE12
+Mcu.Pin31=PE13
+Mcu.Pin32=PE15
+Mcu.Pin33=PB10
+Mcu.Pin34=PB11
+Mcu.Pin35=PB12
+Mcu.Pin36=PB13
+Mcu.Pin37=PB14
+Mcu.Pin38=PB15
+Mcu.Pin39=PD8
 Mcu.Pin4=PE6
-Mcu.Pin40=PB15
-Mcu.Pin41=PD8
-Mcu.Pin42=PD9
-Mcu.Pin43=PD10
-Mcu.Pin44=PD11
-Mcu.Pin45=PD12
-Mcu.Pin46=PD13
-Mcu.Pin47=PD14
-Mcu.Pin48=PD15
-Mcu.Pin49=PC6
+Mcu.Pin40=PD9
+Mcu.Pin41=PD10
+Mcu.Pin42=PD11
+Mcu.Pin43=PD12
+Mcu.Pin44=PD13
+Mcu.Pin45=PD14
+Mcu.Pin46=PD15
+Mcu.Pin47=PC6
+Mcu.Pin48=PC7
+Mcu.Pin49=PC8
 Mcu.Pin5=PC13
-Mcu.Pin50=PC7
-Mcu.Pin51=PC8
-Mcu.Pin52=PC9
-Mcu.Pin53=PA8
-Mcu.Pin54=PA9
-Mcu.Pin55=PA10
-Mcu.Pin56=PA11
-Mcu.Pin57=PA12
-Mcu.Pin58=PA13 (JTMS-SWDIO)
-Mcu.Pin59=PA14 (JTCK-SWCLK)
+Mcu.Pin50=PC9
+Mcu.Pin51=PA8
+Mcu.Pin52=PA9
+Mcu.Pin53=PA10
+Mcu.Pin54=PA11
+Mcu.Pin55=PA12
+Mcu.Pin56=PA13 (JTMS-SWDIO)
+Mcu.Pin57=PA14 (JTCK-SWCLK)
+Mcu.Pin58=PA15 (JTDI)
+Mcu.Pin59=PC11
 Mcu.Pin6=PC14-OSC32_IN (PC14)
-Mcu.Pin60=PA15 (JTDI)
-Mcu.Pin61=PC10
-Mcu.Pin62=PC11
-Mcu.Pin63=PD0
-Mcu.Pin64=PD1
-Mcu.Pin65=PD2
-Mcu.Pin66=PD3
-Mcu.Pin67=PD4
-Mcu.Pin68=PD5
-Mcu.Pin69=PD6
+Mcu.Pin60=PD0
+Mcu.Pin61=PD1
+Mcu.Pin62=PD3
+Mcu.Pin63=PD4
+Mcu.Pin64=PD5
+Mcu.Pin65=PD6
+Mcu.Pin66=PD7
+Mcu.Pin67=PB4 (NJTRST)
+Mcu.Pin68=PB5
+Mcu.Pin69=PB6
 Mcu.Pin7=PC15-OSC32_OUT (PC15)
-Mcu.Pin70=PD7
-Mcu.Pin71=PB3 (JTDO-TRACESWO)
-Mcu.Pin72=PB4 (NJTRST)
-Mcu.Pin73=PB5
-Mcu.Pin74=PB6
-Mcu.Pin75=PB7
-Mcu.Pin76=PB8
-Mcu.Pin77=PB9
-Mcu.Pin78=PE0
-Mcu.Pin79=PE1
+Mcu.Pin70=PB7
+Mcu.Pin71=PB8
+Mcu.Pin72=PB9
+Mcu.Pin73=PE0
+Mcu.Pin74=VP_RTC_VS_RTC_Activate
+Mcu.Pin75=VP_RTC_VS_RTC_Calendar
+Mcu.Pin76=VP_RTC_VS_RTC_Alarm_B_Intern
+Mcu.Pin77=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin78=VP_SYS_VS_Systick
+Mcu.Pin79=VP_USB_HOST_VS_USB_HOST_CDC_FS
 Mcu.Pin8=PH0-OSC_IN (PH0)
-Mcu.Pin80=VP_RTC_VS_RTC_Activate
-Mcu.Pin81=VP_RTC_VS_RTC_Calendar
-Mcu.Pin82=VP_RTC_VS_RTC_Alarm_B_Intern
-Mcu.Pin83=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin84=VP_SYS_VS_Systick
-Mcu.Pin85=VP_USB_HOST_VS_USB_HOST_CDC_FS
-Mcu.Pin9=PH1-OSC_OUT (PH1)
-Mcu.PinsNb=86
+Mcu.Pin9=PC0
+Mcu.PinsNb=80
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476VGTx
@@ -113,8 +107,9 @@ MxDb.Version=DB.5.0.40
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.EXTI3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -127,11 +122,8 @@ NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-PA1.GPIOParameters=GPIO_PuPd,GPIO_Mode
-PA1.GPIO_Mode=GPIO_MODE_INPUT
-PA1.GPIO_PuPd=GPIO_NOPULL
 PA1.Locked=true
-PA1.Signal=GPIO_Input
+PA1.Signal=GPXTI1
 PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PA10.GPIO_Mode=GPIO_MODE_AF_PP
 PA10.GPIO_PuPd=GPIO_NOPULL
@@ -166,16 +158,10 @@ PA15\ (JTDI).GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA15\ (JTDI).Locked=true
 PA15\ (JTDI).Mode=SEG17
 PA15\ (JTDI).Signal=LCD_SEG17
-PA2.GPIOParameters=GPIO_PuPd,GPIO_Mode
-PA2.GPIO_Mode=GPIO_MODE_INPUT
-PA2.GPIO_PuPd=GPIO_NOPULL
 PA2.Locked=true
-PA2.Signal=GPIO_Input
-PA3.GPIOParameters=GPIO_PuPd,GPIO_Mode
-PA3.GPIO_Mode=GPIO_MODE_INPUT
-PA3.GPIO_PuPd=GPIO_NOPULL
+PA2.Signal=GPXTI2
 PA3.Locked=true
-PA3.Signal=GPIO_Input
+PA3.Signal=GPXTI3
 PA4.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
 PA4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
 PA4.GPIO_PuPd=GPIO_NOPULL
@@ -277,10 +263,6 @@ PB2.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB2.Locked=true
 PB2.PinState=GPIO_PIN_RESET
 PB2.Signal=GPIO_Output
-PB3\ (JTDO-TRACESWO).GPIOParameters=GPIO_PuPd
-PB3\ (JTDO-TRACESWO).GPIO_PuPd=GPIO_PULLDOWN
-PB3\ (JTDO-TRACESWO).Locked=true
-PB3\ (JTDO-TRACESWO).Signal=GPXTI3
 PB4\ (NJTRST).GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PB4\ (NJTRST).GPIO_Mode=GPIO_MODE_AF_PP
 PB4\ (NJTRST).GPIO_PuPd=GPIO_NOPULL
@@ -323,11 +305,6 @@ PC1.GPIO_Mode=GPIO_MODE_INPUT
 PC1.GPIO_PuPd=GPIO_NOPULL
 PC1.Locked=true
 PC1.Signal=GPIO_Input
-PC10.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
-PC10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
-PC10.GPIO_PuPd=GPIO_NOPULL
-PC10.Locked=true
-PC10.Signal=GPXTI10
 PC11.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
 PC11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PC11.GPIO_PuPd=GPIO_NOPULL
@@ -341,11 +318,9 @@ PC13.GPIO_PuPd=GPIO_NOPULL
 PC13.Locked=true
 PC13.Signal=GPXTI13
 PC14-OSC32_IN\ (PC14).Locked=true
-PC14-OSC32_IN\ (PC14).Mode=LSE-External-Oscillator
-PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
+PC14-OSC32_IN\ (PC14).Signal=GPXTI14
 PC15-OSC32_OUT\ (PC15).Locked=true
-PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
-PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
+PC15-OSC32_OUT\ (PC15).Signal=GPXTI15
 PC2.GPIOParameters=GPIO_PuPd,GPIO_Mode
 PC2.GPIO_Mode=GPIO_MODE_INPUT
 PC2.GPIO_PuPd=GPIO_NOPULL
@@ -410,7 +385,7 @@ PCC.Temperature=25
 PCC.Vdd=3.0
 PD0.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
 PD0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
-PD0.GPIO_PuPd=GPIO_NOPULL
+PD0.GPIO_PuPd=GPIO_PULLDOWN
 PD0.Locked=true
 PD0.Signal=GPXTI0
 PD1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
@@ -461,11 +436,6 @@ PD15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD15.Locked=true
 PD15.Mode=SEG35
 PD15.Signal=LCD_SEG35
-PD2.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
-PD2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
-PD2.GPIO_PuPd=GPIO_NOPULL
-PD2.Locked=true
-PD2.Signal=GPXTI2
 PD3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PD3.GPIO_Mode=GPIO_MODE_AF_PP
 PD3.GPIO_PuPd=GPIO_NOPULL
@@ -522,17 +492,8 @@ PE0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PE0.Locked=true
 PE0.PinState=GPIO_PIN_RESET
 PE0.Signal=GPIO_Output
-PE1.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
-PE1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
-PE1.GPIO_PuPd=GPIO_NOPULL
-PE1.Locked=true
-PE1.Signal=GPXTI1
-PE10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
-PE10.GPIO_Mode=GPIO_MODE_AF_PP
-PE10.GPIO_PuPd=GPIO_NOPULL
-PE10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE10.Locked=true
-PE10.Signal=QUADSPI_CLK
+PE10.Signal=GPXTI10
 PE11.GPIOParameters=PinState
 PE11.Locked=true
 PE11.PinState=GPIO_PIN_RESET
@@ -544,8 +505,6 @@ PE12.Signal=GPIO_Output
 PE13.Locked=true
 PE13.Mode=TX_Only_Simplex_Unidirect_Master
 PE13.Signal=SPI1_SCK
-PE14.Locked=true
-PE14.Signal=SPI1_MISO
 PE15.Locked=true
 PE15.Mode=TX_Only_Simplex_Unidirect_Master
 PE15.Signal=SPI1_MOSI
@@ -605,11 +564,7 @@ PE9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PE9.Locked=true
 PE9.Signal=SAI1_FS_B
 PH0-OSC_IN\ (PH0).Locked=true
-PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
-PH1-OSC_OUT\ (PH1).Locked=true
-PH1-OSC_OUT\ (PH1).Mode=HSE-External-Oscillator
-PH1-OSC_OUT\ (PH1).Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -637,7 +592,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_LCD_Init-LCD-false-HAL-true,6-MX_SAI1_Init-SAI1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USB_HOST_Init-USB_HOST-false-HAL-false,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C2_Init-I2C2-false-HAL-true,4-MX_LCD_Init-LCD-false-HAL-true,5-MX_SAI1_Init-SAI1-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_USB_HOST_Init-USB_HOST-false-HAL-false,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_RTC_Init-RTC-false-HAL-true
 RCC.ADCFreq_Value=48000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=20000000
@@ -712,6 +667,10 @@ SH.GPXTI10.0=GPIO_EXTI10
 SH.GPXTI10.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.GPXTI14.0=GPIO_EXTI14
+SH.GPXTI14.ConfNb=1
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
 SH.GPXTI3.0=GPIO_EXTI3
