--- a/project_L4Discovery/project_L4Discovery.ioc
+++ b/project_L4Discovery/project_L4Discovery.ioc
@@ -384,8 +384,8 @@ PCC.Series=STM32L4
 PCC.Temperature=25
 PCC.Vdd=3.0
 PD0.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
-PD0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
-PD0.GPIO_PuPd=GPIO_PULLDOWN
+PD0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PD0.GPIO_PuPd=GPIO_PULLUP
 PD0.Locked=true
 PD0.Signal=GPXTI0
 PD1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
@@ -586,8 +586,8 @@ ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=SPIdisplay.ioc
-ProjectManager.ProjectName=SPIdisplay
+ProjectManager.ProjectFileName=project_L4Discovery.ioc
+ProjectManager.ProjectName=project_L4Discovery
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
@@ -610,12 +610,13 @@ RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=20000000
 RCC.I2C2Freq_Value=20000000
 RCC.I2C3Freq_Value=20000000
-RCC.IPParameters=ADCFreq_Value,AHBCLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PREFETCH_ENABLE,PWRFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
+RCC.IPParameters=ADCFreq_Value,AHBCLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PREFETCH_ENABLE,PWRFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
 RCC.LCDFreq_Value=32000
 RCC.LPTIM1Freq_Value=20000000
 RCC.LPTIM2Freq_Value=20000000
 RCC.LPUART1Freq_Value=20000000
 RCC.LSCOPinFreq_Value=32000
+RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=40000000
 RCC.MSI_VALUE=4000000
