--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -3,27 +3,38 @@ File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32L0
 Mcu.IP0=ADC
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SPI1
-Mcu.IP4=SYS
-Mcu.IPNb=5
+Mcu.IP1=LPTIM1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=RTC
+Mcu.IP5=SPI1
+Mcu.IP6=SYS
+Mcu.IP7=TIM21
+Mcu.IPNb=8
 Mcu.Name=STM32L073R(B-Z)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PA0
-Mcu.Pin1=PA5
-Mcu.Pin10=PA14
-Mcu.Pin11=PB6
-Mcu.Pin12=VP_SYS_VS_Systick
-Mcu.Pin2=PA7
-Mcu.Pin3=PB1
-Mcu.Pin4=PB2
-Mcu.Pin5=PB13
-Mcu.Pin6=PB14
-Mcu.Pin7=PB15
-Mcu.Pin8=PC7
-Mcu.Pin9=PA13
-Mcu.PinsNb=13
+Mcu.Pin0=PC14-OSC32_IN
+Mcu.Pin1=PC15-OSC32_OUT
+Mcu.Pin10=PB15
+Mcu.Pin11=PC7
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PB6
+Mcu.Pin15=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
+Mcu.Pin16=VP_RTC_VS_RTC_Activate
+Mcu.Pin17=VP_RTC_VS_RTC_Calendar
+Mcu.Pin18=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin2=PA0
+Mcu.Pin20=VP_TIM21_VS_no_output1
+Mcu.Pin3=PA1
+Mcu.Pin4=PA5
+Mcu.Pin5=PA7
+Mcu.Pin6=PB1
+Mcu.Pin7=PB2
+Mcu.Pin8=PB13
+Mcu.Pin9=PB14
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L073RZTx
@@ -35,11 +46,13 @@ NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.RTC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 PA0.Mode=IN0
 PA0.Signal=ADC_IN0
+PA1.Signal=S_TIM21_ETR
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14.Mode=Serial_Wire
@@ -69,6 +82,10 @@ PB2.Locked=true
 PB2.Signal=GPXTI2
 PB6.Locked=true
 PB6.Signal=GPIO_Output
+PC14-OSC32_IN.Mode=LSE-External-Oscillator
+PC14-OSC32_IN.Signal=RCC_OSC32_IN
+PC15-OSC32_OUT.Mode=LSE-External-Oscillator
+PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PC7.Locked=true
 PC7.Signal=GPIO_Output
 PCC.Checker=true
@@ -106,7 +123,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,1-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM21_Init-TIM21-false-HAL-true
 RCC.48CLKFreq_Value=24000000
 RCC.AHBFreq_Value=2097000
 RCC.APB1Freq_Value=2097000
@@ -120,11 +137,10 @@ RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=2097000
 RCC.I2C3Freq_Value=2097000
-RCC.IPParameters=48CLKFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FamilyName,HSE_VALUE,HSI16_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSE_VALUE,LSI_VALUE,MSI_VALUE,PLLCLKFreq_Value,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,TIMFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
+RCC.IPParameters=48CLKFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FamilyName,HSE_VALUE,HSI16_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSI_VALUE,MSI_VALUE,PLLCLKFreq_Value,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,TIMFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
 RCC.LCDFreq_Value=37000
 RCC.LPTIMFreq_Value=2097000
 RCC.LPUARTFreq_Value=2097000
-RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=37000
 RCC.MSI_VALUE=2097000
 RCC.PLLCLKFreq_Value=24000000
@@ -137,6 +153,9 @@ RCC.USART1Freq_Value=2097000
 RCC.USART2Freq_Value=2097000
 RCC.VCOOutputFreq_Value=48000000
 RCC.WatchDogFreq_Value=37000
+RTC.Alarm-Alarm\ A=RTC_ALARM_A
+RTC.Format=RTC_FORMAT_BIN
+RTC.IPParameters=Alarm-Alarm A,Format
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.GPXTI14.0=GPIO_EXTI14
@@ -145,12 +164,26 @@ SH.GPXTI15.0=GPIO_EXTI15
 SH.GPXTI15.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
+SH.S_TIM21_ETR.0=TIM21_ETR,ClockSourceETR_Mode2
+SH.S_TIM21_ETR.ConfNb=1
 SPI1.CalculateBaudRate=1.0485 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM21.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM21.IPParameters=Channel-Output Compare1 No Output
+VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Mode=Counts__internal_clock_event_00
+VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Signal=LPTIM1_VS_LPTIM_counterModeInternalClock
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Alarm_A_Intern.Mode=Alarm A
+VP_RTC_VS_RTC_Alarm_A_Intern.Signal=RTC_VS_RTC_Alarm_A_Intern
+VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
+VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM21_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM21_VS_no_output1.Signal=TIM21_VS_no_output1
 board=custom
 isbadioc=false
