new functions and code refactor for clocks file
set rtc functions can now use args
getters for rtc
alarm setter written
alarm test written
new structs in header

--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -15,26 +15,27 @@ Mcu.Name=STM32L073R(B-Z)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PB15
-Mcu.Pin11=PC7
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PB6
-Mcu.Pin15=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
-Mcu.Pin16=VP_RTC_VS_RTC_Activate
-Mcu.Pin17=VP_RTC_VS_RTC_Calendar
-Mcu.Pin18=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin19=VP_SYS_VS_Systick
-Mcu.Pin2=PA0
-Mcu.Pin20=VP_TIM21_VS_no_output1
-Mcu.Pin3=PA1
-Mcu.Pin4=PA5
-Mcu.Pin5=PA7
-Mcu.Pin6=PB1
-Mcu.Pin7=PB2
-Mcu.Pin8=PB13
-Mcu.Pin9=PB14
-Mcu.PinsNb=21
+Mcu.Pin10=PB14
+Mcu.Pin11=PB15
+Mcu.Pin12=PC7
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PB6
+Mcu.Pin16=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
+Mcu.Pin17=VP_RTC_VS_RTC_Activate
+Mcu.Pin18=VP_RTC_VS_RTC_Calendar
+Mcu.Pin19=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin2=PC0
+Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin21=VP_TIM21_VS_no_output1
+Mcu.Pin3=PA0
+Mcu.Pin4=PA1
+Mcu.Pin5=PA5
+Mcu.Pin6=PA7
+Mcu.Pin7=PB1
+Mcu.Pin8=PB2
+Mcu.Pin9=PB13
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L073RZTx
@@ -82,6 +83,8 @@ PB2.Locked=true
 PB2.Signal=GPXTI2
 PB6.Locked=true
 PB6.Signal=GPIO_Output
+PC0.Locked=true
+PC0.Signal=GPIO_Output
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
