--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -15,27 +15,29 @@ Mcu.Name=STM32L073R(B-Z)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PB14
-Mcu.Pin11=PB15
-Mcu.Pin12=PC7
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=PB6
-Mcu.Pin16=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
-Mcu.Pin17=VP_RTC_VS_RTC_Activate
-Mcu.Pin18=VP_RTC_VS_RTC_Calendar
-Mcu.Pin19=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin10=PB13
+Mcu.Pin11=PB14
+Mcu.Pin12=PB15
+Mcu.Pin13=PC7
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PB6
+Mcu.Pin17=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
+Mcu.Pin18=VP_RTC_VS_RTC_Activate
+Mcu.Pin19=VP_RTC_VS_RTC_Calendar
 Mcu.Pin2=PC0
-Mcu.Pin20=VP_SYS_VS_Systick
-Mcu.Pin21=VP_TIM21_VS_no_output1
-Mcu.Pin3=PA0
-Mcu.Pin4=PA1
-Mcu.Pin5=PA5
-Mcu.Pin6=PA7
-Mcu.Pin7=PB1
-Mcu.Pin8=PB2
-Mcu.Pin9=PB13
-Mcu.PinsNb=22
+Mcu.Pin20=VP_RTC_VS_RTC_Alarm_B_Intern
+Mcu.Pin21=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_TIM21_VS_no_output1
+Mcu.Pin3=PC1
+Mcu.Pin4=PA0
+Mcu.Pin5=PA1
+Mcu.Pin6=PA5
+Mcu.Pin7=PA7
+Mcu.Pin8=PB1
+Mcu.Pin9=PB2
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L073RZTx
@@ -85,6 +87,8 @@ PB6.Locked=true
 PB6.Signal=GPIO_Output
 PC0.Locked=true
 PC0.Signal=GPIO_Output
+PC1.Locked=true
+PC1.Signal=GPIO_Output
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -157,8 +161,9 @@ RCC.USART2Freq_Value=2097000
 RCC.VCOOutputFreq_Value=48000000
 RCC.WatchDogFreq_Value=37000
 RTC.Alarm-Alarm\ A=RTC_ALARM_A
+RTC.Alarm_B-Alarm\ B=RTC_ALARM_B
 RTC.Format=RTC_FORMAT_BIN
-RTC.IPParameters=Alarm-Alarm A,Format
+RTC.IPParameters=Alarm-Alarm A,Format,Alarm_B-Alarm B
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.GPXTI14.0=GPIO_EXTI14
@@ -182,6 +187,8 @@ VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_RTC_VS_RTC_Alarm_A_Intern.Mode=Alarm A
 VP_RTC_VS_RTC_Alarm_A_Intern.Signal=RTC_VS_RTC_Alarm_A_Intern
+VP_RTC_VS_RTC_Alarm_B_Intern.Mode=Alarm B
+VP_RTC_VS_RTC_Alarm_B_Intern.Signal=RTC_VS_RTC_Alarm_B_Intern
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
