timer and stopwatch functionality in progress
starting to use hardware timers (low-power timer, timer21, and maybe
another one). not complete. need to sort out how updates to screen
should work and test code to see if they behave as planned

--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -27,28 +27,28 @@ Mcu.Name=STM32L073R(B-Z)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PB13
-Mcu.Pin11=PB14
-Mcu.Pin12=PB15
-Mcu.Pin13=PC7
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PB6
-Mcu.Pin17=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
-Mcu.Pin18=VP_RTC_VS_RTC_Activate
-Mcu.Pin19=VP_RTC_VS_RTC_Calendar
+Mcu.Pin10=PB14
+Mcu.Pin11=PB15
+Mcu.Pin12=PC7
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PB6
+Mcu.Pin16=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
+Mcu.Pin17=VP_RTC_VS_RTC_Activate
+Mcu.Pin18=VP_RTC_VS_RTC_Calendar
+Mcu.Pin19=VP_RTC_VS_RTC_Alarm_B_Intern
 Mcu.Pin2=PC0
-Mcu.Pin20=VP_RTC_VS_RTC_Alarm_B_Intern
-Mcu.Pin21=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_TIM21_VS_no_output1
+Mcu.Pin20=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_TIM21_VS_no_output1
+Mcu.Pin23=VP_TIM21_VS_NoETR
 Mcu.Pin3=PC1
 Mcu.Pin4=PA0
-Mcu.Pin5=PA1
-Mcu.Pin6=PA5
-Mcu.Pin7=PA7
-Mcu.Pin8=PB1
-Mcu.Pin9=PB2
+Mcu.Pin5=PA5
+Mcu.Pin6=PA7
+Mcu.Pin7=PB1
+Mcu.Pin8=PB2
+Mcu.Pin9=PB13
 Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -56,10 +56,10 @@ Mcu.UserName=STM32L073RZTx
 MxCube.Version=5.4.0
 MxDb.Version=DB.5.0.40
 NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.EXTI2_3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.EXTI4_15_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.LPTIM1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.RTC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -68,7 +68,6 @@ NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 PA0.Mode=IN0
 PA0.Signal=ADC_IN0
-PA1.Signal=S_TIM21_ETR
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14.Mode=Serial_Wire
@@ -92,8 +91,6 @@ PB15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB15.GPIO_PuPd=GPIO_PULLUP
 PB15.Locked=true
 PB15.Signal=GPXTI15
-PB2.GPIOParameters=GPIO_PuPd
-PB2.GPIO_PuPd=GPIO_PULLDOWN
 PB2.Locked=true
 PB2.Signal=GPXTI2
 PB6.Locked=true
@@ -143,7 +140,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM21_Init-TIM21-false-HAL-true,7-MX_LPTIM1_Init-LPTIM1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM21_Init-TIM21-false-HAL-true,7-MX_LPTIM1_Init-LPTIM1-false-HAL-true,8-MX_DMA_Init-DMA-false-HAL-true
 RCC.48CLKFreq_Value=24000000
 RCC.AHBFreq_Value=2097000
 RCC.APB1Freq_Value=2097000
@@ -185,15 +182,18 @@ SH.GPXTI15.0=GPIO_EXTI15
 SH.GPXTI15.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
-SH.S_TIM21_ETR.0=TIM21_ETR,ClockSourceETR_Mode2
-SH.S_TIM21_ETR.ConfNb=1
 SPI1.CalculateBaudRate=1.0485 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM21.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM21.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
-TIM21.IPParameters=Channel-Output Compare1 No Output
+TIM21.CounterMode=TIM_COUNTERMODE_DOWN
+TIM21.IPParameters=Channel-Output Compare1 No Output,Pulse-Output Compare1 No Output,TIM21_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM21,CounterMode,AutoReloadPreload,Period
+TIM21.Period=0x8000
+TIM21.Pulse-Output\ Compare1\ No\ Output=0
+TIM21.TIM21_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM21=TIM21_ETR_LSE
 VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Mode=Counts__internal_clock_event_00
 VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Signal=LPTIM1_VS_LPTIM_counterModeInternalClock
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
@@ -206,6 +206,8 @@ VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM21_VS_NoETR.Mode=ClockSourceETR_Mode2_Remap_TIM21
+VP_TIM21_VS_NoETR.Signal=TIM21_VS_NoETR
 VP_TIM21_VS_no_output1.Mode=Output Compare1 No Output
 VP_TIM21_VS_no_output1.Signal=TIM21_VS_no_output1
 board=custom
