--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -36,11 +36,12 @@ Mcu.Pin15=PB6
 Mcu.Pin16=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
 Mcu.Pin17=VP_RTC_VS_RTC_Activate
 Mcu.Pin18=VP_RTC_VS_RTC_Calendar
-Mcu.Pin19=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin19=VP_RTC_VS_RTC_Alarm_B_Intern
 Mcu.Pin2=PC0
-Mcu.Pin20=VP_SYS_VS_Systick
-Mcu.Pin21=VP_TIM21_VS_no_output1
-Mcu.Pin22=VP_TIM21_VS_NoETR
+Mcu.Pin20=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_TIM21_VS_no_output1
+Mcu.Pin23=VP_TIM21_VS_NoETR
 Mcu.Pin3=PC1
 Mcu.Pin4=PA0
 Mcu.Pin5=PA5
@@ -48,7 +49,7 @@ Mcu.Pin6=PA7
 Mcu.Pin7=PB1
 Mcu.Pin8=PB2
 Mcu.Pin9=PB13
-Mcu.PinsNb=23
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L073RZTx
@@ -59,11 +60,14 @@ NVIC.EXTI2_3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.EXTI4_15_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.LPTIM1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.RTC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM21_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA0.Mode=IN0
 PA0.Signal=ADC_IN0
 PA13.Mode=Serial_Wire
@@ -169,8 +173,10 @@ RCC.USART2Freq_Value=2097000
 RCC.VCOOutputFreq_Value=48000000
 RCC.WatchDogFreq_Value=37000
 RTC.Alarm-Alarm\ A=RTC_ALARM_A
+RTC.AlarmDateWeekDaySel-Alarm\ A=RTC_ALARMDATEWEEKDAYSEL_WEEKDAY
+RTC.Alarm_B-Alarm\ B=RTC_ALARM_B
 RTC.Format=RTC_FORMAT_BIN
-RTC.IPParameters=Alarm-Alarm A,Format
+RTC.IPParameters=Alarm-Alarm A,Format,AlarmDateWeekDaySel-Alarm A,Alarm_B-Alarm B
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.GPXTI14.0=GPIO_EXTI14
@@ -197,6 +203,8 @@ VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_RTC_VS_RTC_Alarm_A_Intern.Mode=Alarm A
 VP_RTC_VS_RTC_Alarm_A_Intern.Signal=RTC_VS_RTC_Alarm_A_Intern
+VP_RTC_VS_RTC_Alarm_B_Intern.Mode=Alarm B
+VP_RTC_VS_RTC_Alarm_B_Intern.Signal=RTC_VS_RTC_Alarm_B_Intern
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
