--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -63,7 +63,6 @@ NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.LPTIM1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.RTC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
@@ -176,7 +175,7 @@ RTC.Alarm-Alarm\ A=RTC_ALARM_A
 RTC.AlarmDateWeekDaySel-Alarm\ A=RTC_ALARMDATEWEEKDAYSEL_WEEKDAY
 RTC.Alarm_B-Alarm\ B=RTC_ALARM_B
 RTC.Format=RTC_FORMAT_BIN
-RTC.IPParameters=Alarm-Alarm A,Format,AlarmDateWeekDaySel-Alarm A,Alarm_B-Alarm B
+RTC.IPParameters=Format,Alarm-Alarm A,Alarm_B-Alarm B,AlarmDateWeekDaySel-Alarm A
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.GPXTI14.0=GPIO_EXTI14
