--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -28,29 +28,30 @@ Mcu.Name=STM32L073R(B-Z)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PB14
-Mcu.Pin11=PB15
-Mcu.Pin12=PC7
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=PB6
-Mcu.Pin16=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
-Mcu.Pin17=VP_RTC_VS_RTC_Activate
-Mcu.Pin18=VP_RTC_VS_RTC_Calendar
-Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin10=PB13
+Mcu.Pin11=PB14
+Mcu.Pin12=PB15
+Mcu.Pin13=PC7
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PB6
+Mcu.Pin17=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
+Mcu.Pin18=VP_RTC_VS_RTC_Activate
+Mcu.Pin19=VP_RTC_VS_RTC_Calendar
 Mcu.Pin2=PC0
-Mcu.Pin20=VP_TIM21_VS_no_output1
-Mcu.Pin21=VP_TIM21_VS_NoETR
-Mcu.Pin22=VP_TIM22_VS_no_output1
-Mcu.Pin23=VP_TIM22_VS_NoETR
+Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin21=VP_TIM21_VS_no_output1
+Mcu.Pin22=VP_TIM21_VS_NoETR
+Mcu.Pin23=VP_TIM22_VS_no_output1
+Mcu.Pin24=VP_TIM22_VS_NoETR
 Mcu.Pin3=PC1
-Mcu.Pin4=PA0
-Mcu.Pin5=PA5
-Mcu.Pin6=PA7
-Mcu.Pin7=PB1
-Mcu.Pin8=PB2
-Mcu.Pin9=PB13
-Mcu.PinsNb=24
+Mcu.Pin4=PC3
+Mcu.Pin5=PA0
+Mcu.Pin6=PA5
+Mcu.Pin7=PA7
+Mcu.Pin8=PB1
+Mcu.Pin9=PB2
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L073RZTx
@@ -108,6 +109,8 @@ PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC3.Locked=true
+PC3.Signal=GPIO_Output
 PC7.Locked=true
 PC7.Signal=GPIO_Output
 PCC.Checker=true
