--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -39,11 +39,12 @@ Mcu.Pin17=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
 Mcu.Pin18=VP_RTC_VS_RTC_Activate
 Mcu.Pin19=VP_RTC_VS_RTC_Calendar
 Mcu.Pin2=PC0
-Mcu.Pin20=VP_SYS_VS_Systick
-Mcu.Pin21=VP_TIM21_VS_no_output1
-Mcu.Pin22=VP_TIM21_VS_NoETR
-Mcu.Pin23=VP_TIM22_VS_no_output1
-Mcu.Pin24=VP_TIM22_VS_NoETR
+Mcu.Pin20=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_TIM21_VS_no_output1
+Mcu.Pin23=VP_TIM21_VS_NoETR
+Mcu.Pin24=VP_TIM22_VS_no_output1
+Mcu.Pin25=VP_TIM22_VS_NoETR
 Mcu.Pin3=PC1
 Mcu.Pin4=PC3
 Mcu.Pin5=PA0
@@ -51,7 +52,7 @@ Mcu.Pin6=PA5
 Mcu.Pin7=PA7
 Mcu.Pin8=PB1
 Mcu.Pin9=PB2
-Mcu.PinsNb=25
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L073RZTx
@@ -65,6 +66,7 @@ NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.LPTIM1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.RTC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
@@ -178,8 +180,9 @@ RCC.USART1Freq_Value=2097000
 RCC.USART2Freq_Value=2097000
 RCC.VCOOutputFreq_Value=48000000
 RCC.WatchDogFreq_Value=37000
+RTC.Alarm-Alarm\ A=RTC_ALARM_A
 RTC.Format=RTC_FORMAT_BIN
-RTC.IPParameters=Format
+RTC.IPParameters=Format,Alarm-Alarm A
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.GPXTI14.0=GPIO_EXTI14
@@ -209,6 +212,8 @@ VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Mode=Counts__internal_clock_event_00
 VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Signal=LPTIM1_VS_LPTIM_counterModeInternalClock
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Alarm_A_Intern.Mode=Alarm A
+VP_RTC_VS_RTC_Alarm_A_Intern.Signal=RTC_VS_RTC_Alarm_A_Intern
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
