in the process of debugging setTimer.
has behavior where timer flag doesn't trigger more than once for some
reason, but old tests work so hardware is fine. tracked it down to how
time was being added to set alarm. need to redo

--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -39,12 +39,13 @@ Mcu.Pin17=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
 Mcu.Pin18=VP_RTC_VS_RTC_Activate
 Mcu.Pin19=VP_RTC_VS_RTC_Calendar
 Mcu.Pin2=PC0
-Mcu.Pin20=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin22=VP_TIM21_VS_no_output1
-Mcu.Pin23=VP_TIM21_VS_NoETR
-Mcu.Pin24=VP_TIM22_VS_no_output1
-Mcu.Pin25=VP_TIM22_VS_NoETR
+Mcu.Pin20=VP_RTC_VS_RTC_Alarm_B_Intern
+Mcu.Pin21=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_TIM21_VS_no_output1
+Mcu.Pin24=VP_TIM21_VS_NoETR
+Mcu.Pin25=VP_TIM22_VS_no_output1
+Mcu.Pin26=VP_TIM22_VS_NoETR
 Mcu.Pin3=PC1
 Mcu.Pin4=PC3
 Mcu.Pin5=PA0
@@ -52,7 +53,7 @@ Mcu.Pin6=PA5
 Mcu.Pin7=PA7
 Mcu.Pin8=PB1
 Mcu.Pin9=PB2
-Mcu.PinsNb=26
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L073RZTx
@@ -181,8 +182,9 @@ RCC.USART2Freq_Value=2097000
 RCC.VCOOutputFreq_Value=48000000
 RCC.WatchDogFreq_Value=37000
 RTC.Alarm-Alarm\ A=RTC_ALARM_A
+RTC.Alarm_B-Alarm\ B=RTC_ALARM_B
 RTC.Format=RTC_FORMAT_BIN
-RTC.IPParameters=Format,Alarm-Alarm A
+RTC.IPParameters=Format,Alarm-Alarm A,Alarm_B-Alarm B
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.GPXTI14.0=GPIO_EXTI14
@@ -214,6 +216,8 @@ VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_RTC_VS_RTC_Alarm_A_Intern.Mode=Alarm A
 VP_RTC_VS_RTC_Alarm_A_Intern.Signal=RTC_VS_RTC_Alarm_A_Intern
+VP_RTC_VS_RTC_Alarm_B_Intern.Mode=Alarm B
+VP_RTC_VS_RTC_Alarm_B_Intern.Signal=RTC_VS_RTC_Alarm_B_Intern
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
