--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -1,4 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
+ADC.IPParameters=SamplingTime,LowPowerAutoPowerOff
+ADC.LowPowerAutoPowerOff=ENABLE
+ADC.SamplingTime=ADC_SAMPLETIME_79CYCLES_5
 Dma.Request0=SPI1_TX
 Dma.RequestsNb=1
 Dma.SPI1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
@@ -161,7 +164,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM21_Init-TIM21-false-HAL-true,7-MX_LPTIM1_Init-LPTIM1-false-HAL-true,8-MX_DMA_Init-DMA-false-HAL-true,9-MX_TIM22_Init-TIM22-false-HAL-true,10-MX_TIM2_Init-TIM2-false-HAL-true,11-MX_TIM6_Init-TIM6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,1-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM21_Init-TIM21-false-HAL-true,7-MX_LPTIM1_Init-LPTIM1-false-HAL-true,8-MX_DMA_Init-DMA-false-HAL-true,9-MX_TIM22_Init-TIM22-false-HAL-true,10-MX_TIM2_Init-TIM2-false-HAL-true,11-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.48CLKFreq_Value=32000000
 RCC.48RNGFreq_Value=32000000
 RCC.48USBFreq_Value=32000000
