state of code after some more testing

--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -102,7 +102,9 @@ PA7.Mode=TX_Only_Simplex_Unidirect_Master
 PA7.Signal=SPI1_MOSI
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB1.GPIOParameters=PinState
 PB1.Locked=true
+PB1.PinState=GPIO_PIN_RESET
 PB1.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_PuPd
 PB13.GPIO_PuPd=GPIO_PULLDOWN
