2 different low power modes assigned to buttons. works. so many problems with placing hal_suspendtick

--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -3,6 +3,7 @@ ADC.IPParameters=SamplingTime,LowPowerAutoPowerOff
 ADC.LowPowerAutoPowerOff=DISABLE
 ADC.SamplingTime=ADC_SAMPLETIME_79CYCLES_5
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32L0
 Mcu.IP0=ADC
@@ -58,8 +59,8 @@ Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L073RZTx
-MxCube.Version=5.4.0
-MxDb.Version=DB.5.0.40
+MxCube.Version=5.6.0
+MxDb.Version=DB.5.0.60
 NVIC.ADC1_COMP_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.EXTI0_1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.EXTI2_3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -75,7 +76,6 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM21_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM22_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA0.Locked=true
 PA0.Mode=IN0
 PA0.Signal=ADC_IN0
@@ -129,14 +129,6 @@ PC7.GPIOParameters=PinState
 PC7.Locked=true
 PC7.PinState=GPIO_PIN_SET
 PC7.Signal=GPIO_Output
-PCC.Checker=true
-PCC.Line=STM32L0x3
-PCC.MCU=STM32L073R(B-Z)Tx
-PCC.PartNumber=STM32L073RZTx
-PCC.Seq0=0
-PCC.Series=STM32L0
-PCC.Temperature=25
-PCC.Vdd=3.0
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
