moving motor timer from tim2-1 to tim6
starting work on button hold feature

--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -89,6 +89,7 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM21_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM22_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA0.Locked=true
 PA0.Mode=IN0
 PA0.Signal=ADC_IN0
@@ -273,9 +274,10 @@ TIM22.TIM22_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM22=TIM22_ETR_LSE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.IPParameters=Period,Channel-PWM Generation1 CH1
 TIM3.Period=0xFFFF
-TIM6.IPParameters=Period,Prescaler
-TIM6.Period=65535
-TIM6.Prescaler=0x40
+TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM6.IPParameters=Period,Prescaler,AutoReloadPreload
+TIM6.Period=50000
+TIM6.Prescaler=320
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_RTC_VS_RTC_Alarm_B_Intern.Mode=Alarm B
